--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "lucide": "^0.408.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "swiper": "^11.1.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
