--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.17.0",
+    "@uploadthing/react": "^6.7.2",
+    "axios": "^1.7.2",
     "lucide": "^0.408.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.6.2",
+    "prisma": "^5.17.0",
+    "prisma-client": "^0.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "swiper": "^11.1.7",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
