--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@tanstack/react-table": "^8.19.3",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide": "^0.408.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
@@ -25,6 +29,8 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "swiper": "^11.1.7",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
